--- a/latex/parte3.tex
+++ b/latex/parte3.tex
@@ -17,4 +17,4 @@ Para más detalles, consultar la implementación en \textit{tasks.cpp}.
 
 \subsection{Ejercicio 9}
 
-\subsection{Ejercicio 10}
+\input{ej10.tex}
