--- a/latex/parte3.tex
+++ b/latex/parte3.tex
@@ -14,7 +14,6 @@ Para más detalles, consultar la implementación en \textit{tasks.cpp}.
 
 \input{ej8.tex}
 
-
-\subsection{Ejercicio 9}
+\input{ej9.tex}
 
 \input{ej10.tex}
