--- a/latex/ej7.tex
+++ b/latex/ej7.tex
@@ -13,7 +13,7 @@ Las métricas que elegimos fueron:
 Definidas en [Sil1] como:
 \newline
 
-\textbf{Turnaround}: Es el intervalo de tiempo entre el momento en que el proceso comienza a ejecutarse por primera vez, hasta el momento en que
+\textbf{Turnaround}: Es el intervalo de tiempo entre el momento en que el proceso se carga, hasta el momento en que
 el mismo termina. Es decir, es la suma de los períodos usados en esperar datos de memoria, en estar encolado en la ``ready queue'', ejecutandose en 
 la CPU, y haciendo E/S.
 
